# TabletBot

./: .editorconfig  .envrc  .gitignore  268075-nixpkgs.patch  Cargo.toml  default.nix  flake.nix  shell.nix  state.json
.github/workflows/: nix.yml
src/: formatting.rs  main.rs  structures.rs
src/commands/: mod.rs  snippets.rs  types.rs  udev.rs  utils.rs
src/events/: code.rs  config_creation.rs  issue.rs  mod.rs
src/events/issues/: mod.rs  utils.rs
src/structures/: container.rs  mod.rs  state.rs
