# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tabletbot"
version = "1.0.0"
authors = [ "InfinityGhost" ]
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Discord API
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "serenity-next" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.29.1", features = ["macros", "signal", "rt-multi-thread"] }

# Misc
regex = "1.6.0"
octocrab = "0.17.0"
reqwest = "0.11.12"
hex = "0.4.3"
