# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tabletbot"
version = "1.0.0"
authors = [ "InfinityGhost" ]
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Discord API
poise = "0.6"
serenity = "0.12"
tokio = { version = "1.29.1", features = ["macros", "signal", "rt-multi-thread"] }

# Misc
regex = "1.10.2"
octocrab = "0.19.0"
reqwest = "0.11.22"
hex = "0.4.3"
to-arraystring = "0.1.3"
arrayvec = "0.7.4"
