# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "tabletbot"
version = "1.0.0"
authors = [ "InfinityGhost" ]
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Discord API
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
tokio = { version = "1.29.1", features = ["macros", "signal", "rt-multi-thread"] }

# Misc
regex = "1.10"
hex = "0.4.3"
octocrab = "0.38"
reqwest = "0.12"
to-arraystring = "0.2"
arrayvec = "0.7.4"
futures = "0.3.30"
aformat = "0.1.3"
